# tq

./: Makefile  README.md  pyproject.toml
scripts/: demo.sh
tests/: test_cli.py  test_db.py  test_integration.py
tq/: __main__.py  cli.py  db.py  exceptions.py
