[project]
name = "tq"
version = "1.0.1"
description = "A Minimal CLI for Queue-Based Task Tracking"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "click>=8.1.8",
    "rich>=13.9.4",
]

[project.urls]
Homepage = "https://github.com/primaprashant/tq"
Issues = "https://github.com/primaprashant/tq/issues"

[project.scripts]
tq = "tq.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "W", "TID", "PTH", "Q"]
